main.css
#header {
  background: url(https://images.unsplash.com/photo-1477948879622-5f16e220fa42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fG1vdW50YWluJTIwcmFuZ2V8ZW58MHx8MHx8&auto=format&fit=crop&w=1000&q=60)
    center center / cover no-repeat;
}
body,
nav {
  background-color: gainsboro;
}

form .login,
#add-plane {
  background-color: gainsboro;
}

img {
  background-color: gainsboro;
}

ul .dropdown-menu {
  background-color: gainsboro;
}

select,
input,
textarea {
  background-color: gainsboro;
}

div #filter,
#card-body-defense,
#card-body-attack,
#card-body-defense-params {
  background-color: gainsboro;
}

#login-status,
#login,
#logout,
#new-challenge,
#battle-history,
#battle-history-link,
#lobby-link,
#lobby-link,
#change-email-link,
#change-password-link,
#change-email-btn,
#cancel-email-btn,
#change-password-btn,
#cancel-password-btn,
#header3,
#logout-btn,
#welcome-user,
#filter,
#instr,
#set-params-btn,
#reset-params-btn,
#evaluate-btn,
#open-btn,
#submit-btn,
#cancel-btn,
#unchallenged-list,
#test-plane {
  color: royalblue;
}

th,
#label-un,
#label-email,
#label-confirm-password,
#label-password,
#battle-defense-title,
#battle-attack-title,
.card-title {
  color: rgb(235, 132, 14);
}

#defense-setup-timer,
#opponent-timer,
#user-timer,
#defense-setup-timer1 {
  font-size: xx-large;
  margin-top: 2%;
  margin-left: 2%;
  color: rgb(235, 132, 14);
}

#success-messages,
#plane-message {
  width: 8em;
  font-size: xx-large;
  margin-top: 2%;
  margin-left: 2%;
  color: rgb(92, 240, 6);
}

.error-message {
  width: 8em;
  font-size: xx-medium;
  margin-top: 2%;
  margin-left: 2%;
  color: rgb(240, 6, 6);
}

.success-message {
  width: 8em;
  font-size: xx-medium;
  margin-top: 2%;
  margin-left: 2%;
  color: rgb(3, 150, 11);
}

#defense-sky #attack-sky {
  display: block;
}

#defense-messages,
#attack-messages {
  width: 190px;
  height: 100px;
  overflow-y: auto;
  display: flex;
  white-space: pre-wrap;
}

#opponent-turn-message,
#user-turn-message {
  font-style: bold;
  font-size: 1.5rem;
}

.grid-cell,
.grid-cell-attacked {
  width: 50px;
  height: 50px;
  box-sizing: border-box;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  float: left;
  border: solid 1px #000;
}

#defense-sky .grid-cell:hover,
#battle-attack-sky .grid-cell:hover {
  background-color: rgb(206, 7, 233);
  cursor: pointer;
}

#battle-attack-sky .grid-cell-attacked:hover {
  background-color: rgb(206, 7, 233);
}

.column *:not(div, textarea, input) {
  padding-left: 20px;
}

.grid-cell-outer-top {
  width: 50px;
  height: 50px;
  box-sizing: border-box;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  float: left;
}

.grid-cell-outer-side {
  width: 50px;
  height: 50px;
  box-sizing: border-box;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  float: left;
  border-right: solid 1px #000;
}

.lead {
  color: rgb(0, 0, 0);
}

#add-plane {
  height: 600px;
}

.login-key {
  height: 100px;
  font-size: 80px;
  line-height: 100px;
  background: -webkit-linear-gradient(#ffb700, #38ef5d);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.navbar {
  --bs-navbar-padding-x: 0;
  --bs-navbar-padding-y: 0;
}

.container-fluid {
  background-color: gainsboro;
}

#change-email,
#change-password {
  max-width: 420px;
}

.chg-email,
.chg-pass {
  justify-content: space-between;
  display: flex;
  padding-top: 5px;
}

.b-error {
  color: red;
}

.b-success {
  color: green;
}

